// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Conversations Component Conversations component work 1`] = `
<ul
  class="ant-conversations"
>
  <li
    class="ant-conversations-item"
    title="What is Ant Design X ?"
  >
    <div
      class="ant-conversations-icon"
    >
      <div
        id="conversation-test-id"
      >
        icon
      </div>
    </div>
    <span
      class="ant-typography ant-conversations-label"
    >
      What is Ant Design X ?
    </span>
  </li>
  <li
    class="ant-conversations-item"
  >
    <span
      class="ant-typography ant-conversations-label"
    >
      <div>
        Getting Started:
        <a
          href="https://ant-design.antgroup.com/index-cn"
          rel="noreferrer"
          target="_blank"
        >
          Ant Design !
        </a>
      </div>
    </span>
  </li>
  <li
    class="ant-conversations-item"
    title="In Docker, use 🐑 Ollama and initialize"
  >
    <span
      class="ant-typography ant-conversations-label"
    >
      In Docker, use 🐑 Ollama and initialize
    </span>
  </li>
  <li
    class="ant-conversations-item ant-conversations-item-disabled"
    title="Expired, please go to the recycle bin to check"
  >
    <span
      class="ant-typography ant-conversations-label"
    >
      Expired, please go to the recycle bin to check
    </span>
  </li>
  <li
    class="ant-conversations-item ant-conversations-item-disabled"
    title="No key"
  >
    <span
      class="ant-typography ant-conversations-label"
    >
      No key
    </span>
  </li>
</ul>
`;

exports[`Conversations Component rtl render component should be rendered correctly in RTL direction 1`] = `
<ul
  class="ant-conversations ant-conversations-rtl"
>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography ant-typography-rtl"
      >
        pinned
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
        title="What is Ant Design X ?"
      >
        <div
          class="ant-conversations-icon"
        >
          <div
            id="conversation-test-id"
          >
            icon
          </div>
        </div>
        <span
          class="ant-typography ant-typography-rtl ant-conversations-label"
        >
          What is Ant Design X ?
        </span>
        <div>
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
      </li>
    </ul>
  </li>
  <li>
    <div
      class="ant-conversations-group-title"
    />
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-rtl ant-conversations-label"
        >
          <div>
            Getting Started:
            <a
              href="https://ant-design.antgroup.com/index-cn"
              rel="noreferrer"
              target="_blank"
            >
              Ant Design !
            </a>
          </div>
        </span>
        <div>
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
      </li>
      <li
        class="ant-conversations-item"
        title="In Docker, use 🐑 Ollama and initialize"
      >
        <span
          class="ant-typography ant-typography-rtl ant-conversations-label"
        >
          In Docker, use 🐑 Ollama and initialize
        </span>
        <div>
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </div>
      </li>
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
        title="Expired, please go to the recycle bin to check"
      >
        <span
          class="ant-typography ant-typography-rtl ant-conversations-label"
        >
          Expired, please go to the recycle bin to check
        </span>
      </li>
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
        title="No key"
      >
        <span
          class="ant-typography ant-typography-rtl ant-conversations-label"
        >
          No key
        </span>
      </li>
    </ul>
  </li>
</ul>
`;
